--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "elife/api-client": "^1.0@dev",
         "elife/api-sdk": "^1.0@dev",
         "elife/logging-sdk": "dev-master",
+        "elife/ping": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/promises": "^1.3",
         "psr/log": "^1.0",
