Basic error logging (#110)
* Basic error logging

* Signature of error handler

* Raising priority of error handler

* Try LoggerProvider

* Update

* Use application name

* Reduce initial level

* Avoid showing errors in production

* Back to master

--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     },
     "require": {
         "elife/api-client": "^1.0@dev",
-        "elife/api-problem": "^1.0",
+        "elife/api-problem": "^1.1",
         "elife/api-sdk": "^1.0@dev",
         "elife/content-negotiator": "^1.0",
-        "elife/logging-sdk": "dev-master",
+        "elife/logging-sdk": "^1.0@dev",
         "elife/ping": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/promises": "^1.3",
