--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "elife/content-negotiator": "^1.0",
         "elife/logging-sdk": "^1.0@dev",
         "elife/ping": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "6.3.*",
         "guzzlehttp/promises": "^1.3",
         "psr/log": "^1.0",
         "silex/silex": "^2.2",
